<resources>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="main_header">main_header</string>
    <string name="username">Username</string>
    <string name="app_name">BSU Portal</string>
    <string name="password">Password</string>
    <string name="student_portal">STUDENT PORTAL</string>
    <string name="password_is_case_sensitive">* Password is case Sensitive</string>
    <string name="For_new_Students">For New Students</string>
    <string name="contact_us">Contact Us</string>
    <string name="forgot_password_click_here">Forgot Password? Click here</string>
    <string name="sign_in">Sign in</string>
    <string name="bsu_top_img">bsu_top_img</string>
    <string name="for_new_students">For new Students</string>
    <string name="login">LOGIN</string>
    <string name="sr_code">Sr-code</string>
    <string name="information_new_student">information_new_student</string>
    <string name="success_login">Success Login</string>
    <string name="title_activity_navbar">activity_navbar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_links">Links</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="student_id">Student ID</string>
    <string name="curriculum">Curriculum</string>
    <string name="subject">Subject</string>
    <string name="grades">Grades</string>
    <string name="liabilities">Liabilities</string>
    <string name="showGrades">TODO</string>
    <string name="showsubject">showSubject</string>
    <string name="showliabilities">showLiabilities</string>
    <string name="showstud_id">showStud_ID</string>
    <string name="showcurriculum">showCurriculum</string>
    <string name="this_is_home">this is home</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="col1">Time</string>
    <string name="col2">Mon</string>
    <string name="col3">Tue</string>
    <string name="col4">Wed</string>
    <string name="col5">Thu</string>
    <string name="col6">Fri</string>
    <string name="row1">07:00AM - 08:00AM</string>
    <string name="row2"></string>
    <string name="row3">IT331</string>
    <string name="row4"></string>
    <string name="row5"></string>
    <string name="row6">MATH408</string>
    <string name="row21">08:00AM - 09:00AM</string>
    <string name="row22">IT321</string>
    <string name="row23">-do-</string>
    <string name="row24"></string>
    <string name="row25">CS312</string>
    <string name="row26">-do-</string>
    <string name="row31">09:00AM - 10:00AM</string>
    <string name="row32">-do-</string>
    <string name="row33">-do-</string>
    <string name="row34">CS312</string>
    <string name="row35">-do-</string>
    <string name="row36">-do-</string>
    <string name="row41">10:00AM - 11:00AM</string>
    <string name="row42">-do-</string>
    <string name="row43"></string>
    <string name="row44">-do-</string>
    <string name="row45">-do-</string>
    <string name="row46"></string>
    <string name="row51">11:00AM - 12:00PM</string>
    <string name="row52"></string>
    <string name="row53">GED 104</string>
    <string name="row54"></string>
    <string name="row55"></string>
    <string name="row56"></string>
    <string name="row61">12:00PM - 01:00PM</string>
    <string name="row62"></string>
    <string name="row63"></string>
    <string name="row64"></string>
    <string name="row65">IT331</string>
    <string name="row66"></string>
    <string name="row71">01:00PM - 02:00PM</string>
    <string name="row72">GED 104</string>
    <string name="row73">IT314</string>
    <string name="row74"></string>
    <string name="row75">-do-</string>
    <string name="row76"></string>
    <string name="row81">02:00PM - 03:00PM</string>
    <string name="row82">-do-</string>
    <string name="row83">-do-</string>
    <string name="row84"></string>
    <string name="row85">IT314</string>
    <string name="row86">CS311</string>
    <string name="row91">03:00PM - 04:00PM</string>
    <string name="row92"></string>
    <string name="row93">-do-</string>
    <string name="row94"></string>
    <string name="row95">-do-</string>
    <string name="row96">-do-</string>
    <string name="row101">04:00PM - 05:00PM</string>
    <string name="row102"></string>
    <string name="row103"></string>
    <string name="row104"></string>
    <string name="row105"></string>
    <string name="row106">-do-</string>
    <string name="curr_app_name">Sched</string>
    <string name="curr_col1">Code</string>
    <string name="curr_col2">Description</string>
    <string name="curr_col3">Units</string>
    <string name="curr_col4">Year Level</string>
    <string name="curr_col5">Semester</string>
    <string name="curr_col6">Grade</string>
    <string name="curr_row1">IT 111</string>
    <string name="curr_row2">Introduction to Computing</string>
    <string name="curr_row3">3</string>
    <string name="curr_row4">FIRST</string>
    <string name="curr_row5">FIRST</string>
    <string name="curr_row6"></string>
    <string name="curr_row21">CS 111</string>
    <string name="curr_row22">Computer Programming</string>
    <string name="curr_row23">3</string>
    <string name="curr_row24">FIRST</string>
    <string name="curr_row25">FIRST</string>
    <string name="curr_row26"></string>
    <string name="curr_row31">Fili 101</string>
    <string name="curr_row32">Kontekstwalisadong Komunikasyon sa Filipino</string>
    <string name="curr_row33">3</string>
    <string name="curr_row34">FIRST</string>
    <string name="curr_row35">FIRST</string>
    <string name="curr_row36"></string>
</resources>