<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bsu.bsu_fproj.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.bsu.bsu_fproj.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.bsu.bsu_fproj.ui.schedules.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_links"
        android:name="com.bsu.bsu_fproj.ui.links.LinksFragment"
        android:label="@string/menu_links"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.bsu.bsu_fproj.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_slideshow" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.bsu.bsu_fproj.NavActivity"
        android:label="@string/sign_in"
        tools:layout="@layout/activity_main" />

</navigation>