<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/announcement"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/link"
            android:title="@string/menu_links" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/contact"
            android:title="@string/menu_contacts" />

        <item
            android:id="@+id/nav_googleClass"
            android:icon="@drawable/classroom_2"
            android:title="Google Classroom"
            tools:ignore="HardcodedText" />



    </group>
</menu>